vertical gap no longer differ accross tree levels in plusbox menu module

--- a/css/rt_afterburner2-custom.css
+++ b/css/rt_afterburner2-custom.css
@@ -70,6 +70,11 @@ ul.menu li {
     margin-bottom: 5px;
 }
 
+/* JPS 08.10.2013 */
+.plusbox ul ul {
+    padding: 5px 0 0;
+}
+
 /*  Typography  */
 body {color: #ADD8F0;}
 h1, h2, h3, h4, h5, h6 {color: #B7DD7E;}
